# motor-driver

./: CMakeLists.txt  README.md  build.sh  openocd.cfg
.github/workflows/: cpp-build.yml
cmake/: arm-none-eabi-gcc_toolchain.cmake
core/: CMakeLists.txt
core/include/: console_manager.hpp  queued_uart.hpp  stm32f1xx_hal_conf.h  sys.h  uart_interface.hpp  usr_main.hpp
core/src/: console_manager.cpp  main.c  main.cpp  queued_uart.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c  uart_interface.cpp  usr_main.cpp
drivers/: CMakeLists.txt
drivers/CMSIS/Device/ST/STM32F1xx/include/: stm32f100xb.h  stm32f100xe.h  stm32f101x6.h  stm32f101xb.h  stm32f101xe.h  stm32f101xg.h  stm32f102x6.h  stm32f102xb.h  stm32f103x6.h  stm32f103xb.h  stm32f103xe.h  stm32f103xg.h  stm32f105xc.h  stm32f107xc.h
drivers/STM32F1xx_HAL_Driver/src/: stm32f1xx_hal_timebase_rtc_alarm_template.c
